--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
+    "@tailwindcss/postcss": "^4.1.10",
     "autoprefixer": "^10.4.21",
-    "framer-motion": "^12.18.1",
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
+    "framer-motion": "^10.12.16",
+    "next": "13.4.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.8",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4"
+    "eslint": "^8.43.0",
+    "eslint-config-next": "13.4.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10"
   }
 }
